
[package]
name = "audio"
version = "0.1.0"
edition = "2024"

[dependencies]
rtrb = "0.3.2"
web-sys = { version = "0.3", features = [
  "Window",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "AudioContext",
  "AudioNode",
  "AudioWorklet",
  "AudioWorkletNode",
  "MediaStreamAudioSourceNode",
  "MessageEvent",
  "MessagePort",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.56"

