[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
dsp = { path = "../dsp" }
audio = { path = "../audio" }
cli = {  path = "../cli" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3", features = [
  "Window",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "AudioContext",
  "AudioNode",
  "AudioWorklet",
  "AudioWorkletNode",
  "MediaStreamAudioSourceNode",
] }
console_error_panic_hook = "0.1.7"

egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = ["glow"] } # wgpu as alternative 
