[package]
name = "tuners_wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
dsp = { path = "../dsp" }
audio = { path = "../audio" }
gui = { path = "../gui" }
console_error_panic_hook = "0.1.7"
eframe = { version = "0.33.3", default-features = false, features = ["glow"] } # wgpu as alternative 
web-sys = { version = "0.3", features = [
  "Window",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "AudioContext",
  "AudioNode",
  "AudioWorklet",
  "AudioWorkletNode",
  "MediaStreamAudioSourceNode",
] }
egui = "0.33.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.56"
# cli = { version = "0.1.0", path = "../cli" }

[lib]
name = "tuners_wasm"
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",                    # Optimise pour taille
    "--enable-simd",          # Active SIMD
]
